# qt_test

DroneControl/: CMakeLists.txt  DtCRC.cpp  DtCRC.h  DtCommand.h  DtFifo.cpp  DtFifo.h  DtParser.cpp  DtParser.h  DtProtocol.cpp  DtProtocol.h  DtRxTxParser.cpp  DtRxTxParser.h  DtUdpServer.cpp  DtUdpServer.h  DtVideoWidget.cpp  DtVideoWidget.h  appsetupdialog.cpp  appsetupdialog.h  appsetupdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
test1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  setupdialog.cpp  setupdialog.h  setupdialog.ui  socketthread.cpp  socketthread.h  udpserver.cpp  udpserver.h
